--- a/src/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "Default": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=EShop.Catalog;"
+  },
+  "CatalogSettings": {
+    "PicturesBaseUrl": "https://localhost:5000/"
   }
 }
