--- a/src/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -10,5 +10,10 @@
   },
   "CatalogSettings": {
     "PicturesBaseUrl": "https://localhost:5000/"
+  },
+  "RabbitMq": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
