--- a/src/Services/Basket/Basket.API/Basket.API.csproj
+++ b/src/Services/Basket/Basket.API/Basket.API.csproj
@@ -7,7 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="Infrastructure"/>
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1"/>
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.13"/>
+        <PackageReference Include="StackExchange.Redis" Version="2.6.96"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\Catalog\Catalog.API\Catalog.API.csproj"/>
     </ItemGroup>
 
 </Project>
