--- a/src/Services/Basket/Basket.API/Basket.API.csproj
+++ b/src/Services/Basket/Basket.API/Basket.API.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Catalog\Catalog.API\Catalog.API.csproj"/>
+        <ProjectReference Include="..\..\Catalog\Catalog.Contracts\Catalog.Contracts.csproj"/>
     </ItemGroup>
 
 </Project>
