Add Seq and Serilog

--- a/src/Services/Basket/Basket.API/appsettings.Development.json
+++ b/src/Services/Basket/Basket.API/appsettings.Development.json
@@ -12,5 +12,8 @@
     "Host": "localhost",
     "Username": "guest",
     "Password": "guest"
+  },
+  "Seq": {
+    "Host": "http://localhost:5099"
   }
 }
