--- a/src/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -16,5 +16,8 @@
     "Username": "guest",
     "Password": "guest"
   },
-  "SeedDbContext": true
+  "SeedDbContext": true,
+  "Seq": {
+    "Host": "http://localhost:5099"
+  }
 }
