--- a/src/Services/Basket/Basket.API/Basket.API.csproj
+++ b/src/Services/Basket/Basket.API/Basket.API.csproj
@@ -11,6 +11,12 @@
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.13"/>
         <PackageReference Include="StackExchange.Redis" Version="2.6.96"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+        <PackageReference Include="Serilog.AspNetCore" Version="6.1.0-dev-00289"/>
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.1-dev-00787"/>
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.5.0-dev-00359"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00896"/>
+        <PackageReference Include="Serilog.Sinks.Http" Version="8.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.3-dev-00260"/>
     </ItemGroup>
 
     <ItemGroup>
