--- a/src/Services/Basket/Basket.API/appsettings.Development.json
+++ b/src/Services/Basket/Basket.API/appsettings.Development.json
@@ -15,5 +15,8 @@
   },
   "Seq": {
     "Host": "http://localhost:5099"
+  },
+  "JwtBearer": {
+    "Authority": "http://localhost:8080/auth/realms/EShop"
   }
 }
